Renamed user to customer for the layers service and above
